master * [FE] Merge status form with carDetailsForm * [FE] Add some spacing and fix some design

--- a/src/containers/Cars/Container.css
+++ b/src/containers/Cars/Container.css
@@ -1,3 +1,7 @@
-.spaceBottom {
-  margin-bottom: 10px;
+.spinnerContainer {
+  padding: 20px;
+  margin: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
